==> nodesign/UPER/src/Modules/LPC_GPIO.c <==
#include "Modules/LPC_GPIO.h"
#define LPC_PIN_FUNCTION_MASK	(BIT7 | 7)		// FUNC bits + AD bit
#define LPC_PIN_MODE_MASK		(3 << 3)

SFPResult lpc_pinMode(SFPFunction *msg) {
	if (SFPFunction_getArgumentCount(msg) != 2) return SFP_ERR_ARG_COUNT;

	if (SFPFunction_getArgumentType(msg, 0) != SFP_ARG_INT || SFPFunction_getArgumentType(msg, 1) != SFP_ARG_INT)
		return SFP_ERR_ARG_TYPE;

	uint8_t pin = SFPFunction_getArgument_int32(msg, 0);
	uint8_t mode = SFPFunction_getArgument_int32(msg, 1);

	if (pin >= LPC_PIN_COUNT) return SFP_ERR_ARG_VALUE;
	if (mode > 4 || mode == 3) return SFP_ERR_ARG_VALUE;

	uint8_t port = 0;
	uint8_t pinNum = LPC_PIN_IDS[pin];
	if (pinNum > 23) {	// if not PIO0_0 to PIO0_23
		port = 1;
		pinNum -= 24;
	}

	*LPC_PIN_REGISTERS[pin] &= ~LPC_PIN_MODE_MASK;	// Remove pull-up/down resistors

	if (mode == 1) {
		LPC_GPIO->DIR[port] |= (1 << pinNum);	// Set direction bit (output)
	} else {
		*LPC_PIN_REGISTERS[pin] |= (mode << 2) & LPC_PIN_MODE_MASK;		// Setup resistors
		LPC_GPIO->DIR[port] &= ~(1 << pinNum);	// Clear direction bit (input)
	}

	return SFP_OK;
}

SFPResult lpc_portMode(SFPFunction *msg) {
	if (SFPFunction_getArgumentCount(msg) != 2) return SFP_ERR_ARG_COUNT;

	if (SFPFunction_getArgumentType(msg, 0) != SFP_ARG_INT || SFPFunction_getArgumentType(msg, 1) != SFP_ARG_INT)
		return SFP_ERR_ARG_TYPE;

	uint8_t port = SFPFunction_getArgument_int32(msg, 0);
	uint8_t mode = SFPFunction_getArgument_int32(msg, 1);

	if (port >= LPC_PORT_COUNT) return SFP_ERR_ARG_VALUE;
	if (mode > 4 || mode == 3) return SFP_ERR_ARG_VALUE;

	uint8_t i;
	uint8_t lpc_port = 0;

	for (i = 0; i < 8; i++) {
		// Get the current pin
		uint8_t pin = LPC_PORT_MAPPING[(port*8)+i];
		uint8_t pinNum = LPC_PIN_IDS[pin];

		if (pinNum > 23) {	// if not PIO0_0 to PIO0_23
			lpc_port = 1;
			pinNum -= 24;
		}

		*LPC_PIN_REGISTERS[pin] &= ~LPC_PIN_MODE_MASK;	// Remove pull-up/down resistors

		if (mode == 1) {
			LPC_GPIO->DIR[lpc_port] |= (1 << pinNum);	// Set direction bit (output)
		} else {
			*LPC_PIN_REGISTERS[pin] |= (mode << 2) & LPC_PIN_MODE_MASK;// Setup resistors
			LPC_GPIO->DIR[lpc_port] &= ~(1 << pinNum);	// Clear direction bit (input)
		}
	}
	return SFP_OK;
}

SFPResult lpc_portWrite(SFPFunction *msg) {
	if (SFPFunction_getArgumentCount(msg) != 2)
		return SFP_ERR_ARG_COUNT;

	if (SFPFunction_getArgumentType(msg, 0) != SFP_ARG_INT)
		return SFP_ERR_ARG_TYPE;

	uint8_t port = SFPFunction_getArgument_int32(msg, 0);
	uint8_t value = SFPFunction_getArgument_int32(msg, 1);

	if (port >= LPC_PORT_COUNT) return SFP_ERR_ARG_VALUE;

	uint8_t lpc_port = 0;
	uint8_t i;
	/* NOTE : The port mapping of WeIO doesn't reflect the real port of LPC.
	 * The portWrite doesn't set the whole port in the same time, but pin per pin.
	 */
	uint8_t pinNum = 0;
	for (i = 0; i < 8; i++) {
		// Get the current pin
		pinNum = LPC_PIN_IDS[LPC_PORT_MAPPING[(port*8)+i]];
		// Get the lpc port for the pin
		if (pinNum > 23) {	// if not PIO0_0 to PIO0_23
			lpc_port = 1;
			pinNum -= 24;
		}
		*LPC_PIN_REGISTERS[LPC_PORT_MAPPING[(port*8)+i]] &= ~LPC_PIN_MODE_MASK;	// Remove pull-up/down resistors
		// Output the value
		if (((value >> i) & 0x01) == 0) {
			LPC_GPIO->CLR[lpc_port] = (1 << pinNum);
		} else {
			LPC_GPIO->SET[lpc_port] = (1 << pinNum);
		}
	}
	return SFP_OK;
}

SFPResult lpc_portRead(SFPFunction *msg) {
	if (SFPFunction_getArgumentCount(msg) != 1)
		return SFP_ERR_ARG_COUNT;

	if (SFPFunction_getArgumentType(msg, 0) != SFP_ARG_INT)
		return SFP_ERR_ARG_TYPE;

	uint8_t port = SFPFunction_getArgument_int32(msg, 0);

	if (port >= LPC_PORT_COUNT)
		return SFP_ERR_ARG_VALUE;

	uint8_t lpc_port = 0;
	uint8_t i;
	uint8_t port_val = 0;

	for (i = 0; i < 8; i++) {
		// Get the current pin
		uint8_t pinNum = LPC_PIN_IDS[LPC_PORT_MAPPING[(port*8)+i]];
		if (pinNum > 23) {	// if not PIO0_0 to PIO0_23
			lpc_port = 1;
			pinNum -= 24;
		}
		if (LPC_GPIO->PIN[lpc_port] & (1 << pinNum))
			port_val |= (1 << i);
	}

	SFPFunction *outFunc = SFPFunction_new();

	if (outFunc == NULL) return SFP_ERR_ALLOC_FAILED;

	SFPFunction_setType(outFunc, SFPFunction_getType(msg));
	SFPFunction_setID(outFunc, UPER_FID_PORTREAD);
	SFPFunction_setName(outFunc, UPER_FNAME_PORTREAD);
	SFPFunction_addArgument_int32(outFunc, port);
	SFPFunction_addArgument_int32(outFunc, port_val);
	SFPFunction_send(outFunc, &stream);
	SFPFunction_delete(outFunc);

	return SFP_OK;
}
