==> mohamed22311/Car-Robot-with-AVR/MCAL/GPIO.c <==
#include "GPIO.h"
#include <avr/io.h>

void pinMode(u8 port_num, u8 pin_num, PinDir dir){
	/*
	 * Check if the input port number is greater than NUM_OF_PINS_PER_PORT value.
	 * Or if the input pin number is greater than NUM_OF_PINS_PER_PORT value.
	 * In this case the input is not valid port/pin number
	*/
	if((pin_num >= NUM_OF_PINS_PER_PORT) || (port_num >= NUM_OF_PORTS)){}
	else{
		/* Setup the pin dir as required */
		switch(port_num){
			case (A | a):
				if(dir == OUTPUT || dir == 1 || dir == HIGH)
				{
					SET_BIT(DDRA,pin_num);
				}
				else
				{
					CLR_BIT(DDRA,pin_num);
				}
				break;
			case (B | b) :
				if(dir == OUTPUT || dir == 1 || dir == HIGH)
				{
					SET_BIT(DDRB,pin_num);
				}
				else
				{
					CLR_BIT(DDRB,pin_num);
				}
				break;
			case (C | c) :
				if(dir == OUTPUT || dir == 1 || dir == HIGH)
				{
					SET_BIT(DDRC,pin_num);
				}
				else
				{
					CLR_BIT(DDRC,pin_num);
				}
				break;
			case (D | d) :
				if(dir == OUTPUT || dir == 1 || dir == HIGH)
				{
					SET_BIT(DDRD,pin_num);
				}
				else
				{
					CLR_BIT(DDRD,pin_num);
				}
				break;
			case (E | e) :
				if(dir == OUTPUT || dir == 1 || dir == HIGH)
				{
					SET_BIT(DDRE,pin_num);
				}
				else
				{
					CLR_BIT(DDRE,pin_num);
				}
				break;

			case (F | f):
				if(dir == OUTPUT || dir == 1 || dir == HIGH)
				{
					SET_BIT(DDRF,pin_num);
				}
				else
				{
					CLR_BIT(DDRF,pin_num);
				}
				break;
			case (G | g) :
				if(pin_num>5){
					break;
				}
				if(dir == OUTPUT || dir == 1 || dir == HIGH)
				{
					SET_BIT(DDRG,pin_num);
				}
				else
				{
					CLR_BIT(DDRG,pin_num);
				}
				break;
			case (H | h) :
				if(dir == OUTPUT || dir == 1 || dir == HIGH)
				{
					SET_BIT(DDRH,pin_num);
				}
				else
				{
					CLR_BIT(DDRH,pin_num);
				}
				break;
			case (J | j) :
				if(dir == OUTPUT || dir == 1 || dir == HIGH)
				{
					SET_BIT(DDRJ,pin_num);
				}
				else
				{
					CLR_BIT(DDRJ,pin_num);
				}
				break;
			case (K | k) :
				if(dir == OUTPUT || dir == 1 || dir == HIGH)
				{
					SET_BIT(DDRK,pin_num);
				}
				else
				{
					CLR_BIT(DDRK,pin_num);
				}
				break;
			case (L | l) :
				if(dir == OUTPUT || dir == 1 || dir == HIGH)
				{
					SET_BIT(DDRL,pin_num);
				}
				else
				{
					CLR_BIT(DDRL,pin_num);
				}
							break;
			}
		}

}

void portMode(u8 port_num, u8 dir){
	/*
		 * Check if the input number is greater than NUM_OF_PORTS value.
		 * In this case the input is not valid port number
		 */
		if(port_num >= NUM_OF_PORTS){}
		else
		{
			/* Setup the port dir as required */
			switch(port_num)
			{
			case (A | a):
				DDRA = dir;
				break;
			case (B | b):
				DDRB = dir;
				break;
			case (C | c):
				DDRC = dir;
				break;
			case (D | d):
				DDRD = dir;
				break;
			case (E | e):
				DDRE = dir;
				break;
			case (F | f):
				DDRF = dir;
				break;
			case (G | g):
				DDRG = dir;
				break;
			case (H | h):
				DDRH = dir;
				break;
			case (J | j):
				DDRJ = dir;
				break;
			case (K | k):
				DDRK = dir;
				break;
			case (L | l):
				DDRL = dir;
				break;
			}
		}

}

void portWrite(u8 port_num, u8 value){
	/*
		 * Check if the input number is greater than NUM_OF_PORTS value.
		 * In this case the input is not valid port number
		 */
		if(port_num >= NUM_OF_PORTS){}
		else
		{
			/* Write the port value as required */
			switch(port_num)
			{
			case (A | a):
				PORTA = value;
				break;
			case (B | b):
				PORTB = value;
				break;
			case (C | c):
				PORTC = value;
				break;
			case (D | d):
				PORTD = value;
				break;
			case (E | e):
				PORTE = value;
				break;
			case (F | f):
				PORTF = value;
				break;
			case (G | g):
				PORTG = value;
				break;
			case (H | h):
				PORTH = value;
				break;
			case (J | j):
				PORTJ = value;
				break;
			case (K | k):
				PORTK = value;
				break;
			case (L | l):
				PORTL = value;
				break;

			}
		}
}

u8 portRead(u8 port_num){
	u8 value = LOW;
	/*
	 * Check if the input number is greater than NUM_OF_PORTS value.
	 * In this case the input is not valid port number
	 */
	if(port_num >= NUM_OF_PORTS){}
	else
	{
		/* Read the port value as required */
		switch(port_num)
		{
		case (A | a):
			value = PINA;
			break;
		case (B | b):
			value = PINB;
			break;
		case (C | c):
			value = PINC;
			break;
		case (D | d):
			value = PIND;
			break;
		case (E | e):
			value = PINE;
			break;
		case (F | f):
			value = PINF;
			break;
		case (G | g):
			value = PING;
			break;
		case (H | h):
			value = PINH;
			break;
		case (J | j):
			value = PINJ;
			break;
		case (K | k):
			value = PINK;
			break;
		case (L | l):
			value = PINL;
			break;
		}
	}

	return value;
}
